--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "peerDependencies": {
     "angular": "^1.7",
-    "chosen-js": "^1.8",
+    "chosen-js": "^1.8"
   },
   "dependencies": {
     "angular": "^1.7",
