--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/rewathkafley/angular-chosen/",
   "keywords": [
-   "chosen"
+   "chosen",
    "anguar chosen"
   ],
   "license": "MIT",
